fix layout overlaps on team reveal and playing pubquiz

--- a/view/static/questionplayer.css
+++ b/view/static/questionplayer.css
@@ -1,6 +1,6 @@
 body{
     margin: 0 !important;
-    padding: 0 !important;
+    padding-top: 50px;
    /* background-color: #000000 !important; */
     overflow: hidden !important;
     font-color: white;
