--- a/view/static/revealwinner.css
+++ b/view/static/revealwinner.css
@@ -1,8 +1,8 @@
 body{
     margin: 0 !important;
-    padding: 0 !important;
     background-color: #000000 !important;
     overflow: hidden !important;
+    padding-top: 50px;
 }
 
 ul{
